// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFlexItem grow 1 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow1"
/>
`;

exports[`EuiFlexItem grow 2 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow2"
/>
`;

exports[`EuiFlexItem grow 3 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow3"
/>
`;

exports[`EuiFlexItem grow 4 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow4"
/>
`;

exports[`EuiFlexItem grow 5 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow5"
/>
`;

exports[`EuiFlexItem grow 6 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow6"
/>
`;

exports[`EuiFlexItem grow 7 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow7"
/>
`;

exports[`EuiFlexItem grow 8 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow8"
/>
`;

exports[`EuiFlexItem grow 9 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow9"
/>
`;

exports[`EuiFlexItem grow 10 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrow10"
/>
`;

exports[`EuiFlexItem grow false is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow euiFlexItem--flexGrowZero"
/>
`;

exports[`EuiFlexItem grow true is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow"
/>
`;

exports[`EuiFlexItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFlexItem euiFlexItem--alignItemsCenter euiFlexItem--justifyContentCenter euiFlexItem--directionRow testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
